--- a/system/CMakeLists.txt
+++ b/system/CMakeLists.txt
@@ -1,5 +1,34 @@
 add_library(fibsys INTERFACE)
 
+function(fibsys_firmware)
+  execute_process(
+    COMMAND git describe --always --dirty --match "NOT A TAG"
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+    OUTPUT_VARIABLE GIT_HASH
+    OUTPUT_STRIP_TRAILING_WHITESPACE)
+  configure_file(${CMAKE_CURRENT_FUNCTION_LIST_DIR}/include/version.hpp.in
+                 ${CMAKE_BINARY_DIR}/include/version.hpp @ONLY)
+  target_include_directories(fibsys INTERFACE ${CMAKE_BINARY_DIR}/include)
+
+  generate_firmware_artifacts(${PROJECT_NAME})
+
+  add_custom_target(
+    flash
+    COMMAND
+      openocd -f ${CMAKE_CURRENT_SOURCE_DIR}/openocd.cfg -c
+      "program ${PROJECT_BINARY_DIR}/${PROJECT_NAME} preverify verify reset exit"
+    DEPENDS ${PROJECT_NAME}
+    VERBATIM
+    COMMENT "Flashing ${PROJECT_NAME} firmware...")
+
+  add_custom_target(
+    reset
+    COMMAND openocd -f ${CMAKE_CURRENT_SOURCE_DIR}/openocd.cfg -c
+            "init;reset;shutdown"
+    VERBATIM
+    COMMENT "Resetting target...")
+endfunction()
+
 add_subdirectory(core/libraries)
 
 target_link_libraries(fibsys INTERFACE STM32F3xx_HAL_Driver ARM_MATH_CM4_GCC
