--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,22 @@
 cmake_minimum_required(VERSION 4.0)
 
-add_compile_options(-Ofast)
-
-project(fibration LANGUAGES C CXX ASM)
+project(
+  fibration
+  LANGUAGES C CXX ASM
+  VERSION 0.0.1)
 
 set(CMAKE_C_STANDARD 23)
 set(CMAKE_C_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_STANDARD 26)
+set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_compile_options(-Wall -Wextra -Werror)
-
-include(system/config/config.cmake) # TODO move config into project folders?
-
-add_subdirectory(extern/ln)
-
-add_subdirectory(system)
-
-add_subdirectory(modules)
-# add_subdirectory(tests) NOTE: cmake only supports one toolchain for one build.
-# Unit test use toolchain for native build (gcc for x86-64) therefore must be
-# built seperately.
+if(CMAKE_CROSSCOMPILING)
+  add_compile_options(-Wall -Wextra -Werror)
+  include(system/config/config.cmake) # TODO move config into project folders?
+  add_subdirectory(extern/ln)
+  add_subdirectory(system)
+  add_subdirectory(modules)
+else()
+  include(CTest)
+  add_subdirectory(tests)
+endif()
