--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,13 +1,13 @@
-cmake_minimum_required(VERSION 3.5)
+add_executable(tests demo.cpp)
 
-project(unitTests)
+include(FetchContent)
+FetchContent_Declare(
+  Catch2
+  GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+  GIT_TAG v3.11.0)
+FetchContent_MakeAvailable(Catch2)
+target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)
 
-ADD_EXECUTABLE(${PROJECT_NAME}
-    source/main.cpp
-    # tests/.templateTests.cpp
-    tests/demo.cpp
-)
-
-include_directories(
-    include
-)
+list(APPEND CMAKE_MODULE_PATH ${catch2_SOURCE_DIR}/extras)
+include(Catch)
+catch_discover_tests(tests)
