chore: cleanup .vscode launch configurations

--- a/modules/higgs/openocd.cfg
+++ b/modules/higgs/openocd.cfg
@@ -1,11 +1,2 @@
-set CHIPNAME stm32f303ret6
-
-# STM32F303RE has:
-#  64 KiB SRAM
-#  16 KiB CCM-SRAM
-set WORKAREASIZE 0x10000
-
+source [find interface/stlink.cfg]
 source [find board/st_nucleo_f3.cfg]
-
-$_TARGETNAME configure -rtos FreeRTOS
-
