--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,55 +1,6 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        // note: make sure "Launch OpenOCD" VSCode task is running and "gdbTarget": "<WSL IPv4 Address>:3333"
-        //
-        // TODO: make launch config general and still working. Having to run "Launch OpenOCD" and specifying 
-        // "gdbTarget" IP address is inconvenient ("localhost" does not work - probably refers to Windows', not WSL).
-        {
-            "presentation": {
-                "hidden": false,
-                "group": "Fibration",
-                "order": 1
-            },
-            "name": "higgs",
-            "device": "STM32F303RE",
-            "cwd": "${workspaceRoot}",
-            "executable": "${workspaceRoot}/.build/debug/modules/higgs/higgs",
-            "request": "launch",
-            "type": "cortex-debug",
-            "servertype": "external",
-            "gdbTarget": "172.26.160.1:3333",
-            // "servertype": "openocd",
-            // "configFiles": [
-            //     "modules/higgs/openocd.cfg",
-            // ],
-            "interface": "swd",
-            "preLaunchTask": "preLaunchTaskHiggs",
-            "svdFile": "${workspaceRoot}/system/msp/STM32F303.svd",
-            // "runToEntryPoint": "BlinkTestApp::Run",
-            "debuggerArgs": [
-                "-d",
-                "${workspaceRoot}",
-                "-l",
-                "30" // necessary ! without it every other session launch would fail
-            ],
-            "showDevDebugOutput": "raw",
-            "showDevDebugTimestamps": false,
-            "numberOfProcessors": 1,
-            "targetProcessor": 0,
-            "openOCDLaunchCommands": [
-                "init",
-                "reset init"
-            ],
-            "preRestartCommands": [
-                "load",
-                "enable breakpoint",
-                "monitor reset"
-            ],
-        },
         {
             "name": "higgs [openocd]",
             "device": "STM32F303RE",
@@ -57,11 +8,18 @@
             "request": "attach",
             "servertype": "openocd",
             "configFiles": [
-                "modules/higgs/openocd.cfg"
+                "interface/stlink.cfg",
+                "board/st_nucleo_f3.cfg"
+            ],
+            "openOCDLaunchCommands": [
+                "adapter speed 4000",
+                "init",
+                "reset halt",
+                "program .build/${input:buildType}/modules/higgs/higgs preverify verify reset"
             ],
             "rtos": "FreeRTOS",
             "cwd": "${workspaceRoot}",
-            "executable": "${workspaceRoot}/.build/debug/modules/higgs/higgs",
+            "executable": "${workspaceRoot}/.build/${input:buildType}/modules/higgs/higgs",
             // "preAttachCommands": [
             //     "monitor tpiu config internal itm.fifo uart off 240000000"
             // ],
@@ -70,6 +28,17 @@
             "breakAfterReset": true,
             // "runToEntryPoint": "main"
             // "showDevDebugOutput": "raw",
-        },
+        }
+    ],
+    "inputs": [
+        {
+            "id": "buildType",
+            "description": "Select build type",
+            "type": "pickString",
+            "options": [
+                "higgs-rel",
+                "higgs-dbg"
+            ]
+        }
     ]
 }
